ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enforcer-ingress
  namespace: enforcer
spec:
  rules:
    - http:
        paths:
          - path: /evaluate
            pathType: Prefix  
            backend:
              service:
                name: nextlabs-enforcer-service
                port:
                  number: 7080
